--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "repl-nix-workspace"
-version = "0.1.0"
-description = "Add your description here"
+name = "mimesis"
+version = "1.0.0"
+description = "Cultural Style Intelligence Engine - AI-powered fashion recommendations based on cultural preferences"
 requires-python = ">=3.11"
 dependencies = [
     "email-validator>=2.2.0",
@@ -12,4 +12,5 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
+    "python-dotenv>=1.0.0",
 ]
