--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 email-validator>=2.2.0
 flask>=3.1.1
 flask-sqlalchemy>=3.1.1
+flask-login>=0.6.3
+google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+requests-oauthlib>=1.3.1
 google-genai>=1.27.0
 gunicorn>=23.0.0
 psycopg2-binary>=2.9.10
