--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ requests-oauthlib>=1.3.1
 google-generativeai==0.5.4
 gunicorn>=23.0.0
 requests==2.31.0
-sqlalchemy==2.0.23
-python-dotenv>=1.0.0 
+sqlalchemy>=2.0.30
+python-dotenv>=1.0.0
+typing-extensions>=4.5.0 
