--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ flask-login==0.6.3
 google-auth>=2.23.0
 google-auth-oauthlib>=1.1.0
 requests-oauthlib>=1.3.1
-google-generativeai==0.5.4
+google-generativeai>=1.27.0
 gunicorn>=23.0.0
 requests==2.31.0
 sqlalchemy>=2.0.30
